--- a/src/components/Axis.css
+++ b/src/components/Axis.css
@@ -16,7 +16,9 @@
   transition: opacity 200ms ease-in;
 }
 
+/*
 .tick-grp {
     -webkit-transition: -webkit-transform 2s;
-    transition: transform 200ms;
+    transition: transform 100ms;
 }
+*/
